[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for M4"
license = "GPL-3.0-only"
name = "cmeel-m4"
requires-python = ">= 3.9"
version = "1.4.20"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-m4"
repository = "https://github.com/cmake-wheel/cmeel-m4.git"
upstream = "https://www.gnu.org/software/m4/"

[tool.cmeel]
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
